--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
+:root {
+  /* Primary colors */
+    --Cyan: hsl(180, 66%, 49%);
+    --DarkViolet: hsl(257, 27%, 26%);
+    /* Secondary colors */
+    --Red: hsl(0, 87%, 67%);
+    /* Neutral */
+    --Gray: hsl(0, 0%, 75%);
+    --GrayishViolet: hsl(257, 7%, 63%);
+    --VeryDarkBlue: hsl(255, 11%, 22%);
+    --VeryDarkViolet: hsl(260, 8%, 14%);
+    --pureWhite: #fff;
+    --pureBlack: #000;
+    /* Font styles */
+    --bodyFontSize: 18px;
+    --lightFontWeight: 500;
+    --heavyFontWeight: 700;
+    --poppins:'Poppins', sans-serif;
+   
+  
+  }
