--- a/src/components/linkForm/linkForm.css
+++ b/src/components/linkForm/linkForm.css
@@ -1,4 +1,9 @@
+
 .form {
+    position: absolute;
+    left:0;
+    right:0;
+    z-index: 1000;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap:10px;
@@ -31,6 +36,7 @@
 
 @media screen and (min-width: 1440px) {
     .form {
+        margin-top: 0;
         display: flex;
         justify-content: center;
         align-items: center;
