--- a/src/components/linkForm/linkForm.css
+++ b/src/components/linkForm/linkForm.css
@@ -1,58 +1,54 @@
-
 .form {
-    position: absolute;
-    left:0;
-    right:0;
-    z-index: 1000;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap:10px;
     width: 70%;
-    border-radius: 10px;
-    padding: 30px;
     margin: 0 auto;
+    padding: 20px;
     background-color: var(--VeryDarkBlue);
     background-image: url('../../images/bg-shorten-mobile.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position-x: right;
-    min-height: 70px;
+    border-radius: 10px;
+}
+.form .input, .form .formButton {
+    text-align: center;
+   display: block;
+   font-size: 18px;
+    width: 90%;
+    border: none;
+    margin: 10px auto;
+    border-radius:10px;
+    padding: 15px 0;
+
+}
+.form .formButton {
+   color: var(--pureWhite);
+   background-color: var(--Cyan);
+
 }
 
-.form input, button {
-    border-radius: 10px;
-    padding: 15px;
-    border: none;
-}
-.form input {
-    font-size: 18px;
-}
-.form button {
-    color: var(--pureWhite);
-    background-color: var(--Cyan);
-    font-weight: 700;
-    font-size: 18px;
-}
 
 @media screen and (min-width: 1440px) {
     .form {
-        margin-top: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+
         background-image: url('../../images/bg-shorten-desktop.svg');
-        background-repeat: repeat;
+        background-repeat: no-repeat;
         background-size: contain;
-        background-position-x: -5%;
+        background-position-x: right;
     }
 
-    .form input {
-        width: 80%;
-        margin-right: 15px;
+    .form .input, .form .formButton {
+        text-align: center;
+        display: inline;
+         margin: 10px 10px;
+    
     }
 
-
-    /* .form button {
+    .form .input {
+        width: 85%;
+        text-align: left;
+        padding-left: 10px;
+    }
+    .form .formButton {
         width: 10%;
-    } */
+    }
 }
