--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -3,6 +3,7 @@
     min-height:100px;
     background:var(--Gray);
     margin: 0;
+    padding-bottom:100px;
 
     /* padding: 100px; */
 }
@@ -21,4 +22,134 @@
     width: 80%;
     margin: 0 auto;
     text-align: center;
-} 
+    padding-bottom: 100px;
+}
+
+
+.spec__container {
+    width: 90%;
+    position: relative;
+    margin: 0 auto;
+    /* display: flex; */
+}
+
+.spec__item {
+    position: relative;
+    background: var(--pureWhite);
+    margin-top: 100px;
+}
+
+
+.spec__content {
+    padding: 50px 30px 30px 30px;
+    text-align: center;
+}
+.spec__content h1 {
+    color: var(--VeryDarkBlue);
+    font-weight: 700;
+    
+}
+.spec__content p {
+    color: var(--GrayishViolet);
+    font-weight: 700;
+
+}
+
+.spec__item-logo {
+    display: flex;
+   width: 100px;
+   height: 100px;
+   border-radius: 100%;
+   /* margin: 0 auto; */
+   justify-content: center;
+   align-items: center;
+  background: var(--VeryDarkBlue);
+  position: absolute;
+  top: -50px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.spec__item-logo img {
+    width: 50px;
+    margin-bottom: 15px;
+}
+
+.spec__line {
+    transform: translateY(-50%);
+    height: 500px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width:5px;
+    background-color: cyan;
+    
+}
+
+@media screen and (min-width: 1440px) {
+    .spec__container {
+        position: relative;
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+    }
+
+    .spec__item {
+        position: relative;
+        width: 35%;
+        margin:0 1%;
+        background: var(--pureWhite);
+        padding: 30px;
+    }
+
+    .spec__content {
+        padding: 30px 0 0 0;
+    }
+    .spec__content h1 {
+        color: var(--VeryDarkBlue);
+        font-weight: 700;
+        
+    }
+    .spec__content p {
+        color: var(--GrayishViolet);
+        font-weight: 700;
+
+    }
+
+    .spec__item-logo {
+      display: flex;
+      position: absolute;
+      top:-50px;
+      background: var(--VeryDarkBlue);
+       width: 100px;
+       height: 100px;
+       justify-content: center;
+       align-items: center;
+       border-radius: 100%;
+
+    }
+
+    .spec__item-logo img {
+       width: 50px;
+       margin-bottom: 0;
+    }
+
+    .spec__line {
+        left: 0;
+        background-color: cyan;
+        position: absolute;
+        left:10%;
+        top: 50%;
+        width:80%;
+        height: 10px;
+        background-color: cyan;
+        
+    }
+}
+/* 
+.aboutContent {
+    width: 100%;
+} */
