--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -2,6 +2,7 @@
 .aboutContent {
     min-height:100px;
     background:#EFF1F7;
+    background-color: #EFF1F7;
     margin: 0;
     padding-bottom:50px;
 }
